changes for image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>ACKNOWLEDGEMENT</h1>
-    <div class="clearfix"> <img src="think.jpeg" alt "Stylesheet Book">
+    <div class="clearfix"> <img src="img/think.jpeg" alt "Stylesheet Book">
         <p>From our past experience, the data provided by logs created with other applications (installed on the device) does not provide accurate and full device and app information.</p>
         <p>Firstly, you will need to install Android Studio for Windows (note you will need approximately 1.5gb free space on your computer) <a href="#">read more....</a> </p>
     </div>
