--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=10" />
     <title>Book with Stylesheet</title>
     <link href="file.css" rel="stylesheet"> </head>
-<link rel="shortcut icon" href="https://sandbox.relegen.com/assetDNA/favicon.ico" type="image/x-icon" />
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
 <body>
     <h1>ACKNOWLEDGEMENT</h1>
